# MTM6107-wavelet

./: .gitignore  CMakeLists.txt  README.md
results/: deney_ozet.md  deney_sonuclari.csv
src/: color.cpp  color.h  compress.cpp  compress.h  experiments.cpp  huffman.cpp  huffman.h  main.cpp  metrics.cpp  metrics.h  wavelet.cpp  wavelet.h
tests/: test_color.cpp  test_compress.cpp  test_huffman.cpp  test_metrics.cpp  test_wavelet.cpp
